--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="content">
         <h1>Rubatic</h1>
         <p>[ rü-ba-tik ]</p>
+        <p class="tagline">< Web Design > < Project Management > < Consulting ></Consulting></p>
       </div>
     </div>
     <div class="bg-cover1"></div>
